# aurelia

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml
.github/workflows/: ci.yml
docs/: deploy.md
scripts/: smoke.py
src/aurelia/: __init__.py  agent.py  cli.py  config.py  escalation.py  intake.py  knowledge.py  logging.py  prompts.py  sheets.py
tests/: conftest.py  test_escalation.py  test_intake.py  test_knowledge.py  test_prompts.py  test_sheets.py
