[project]
name = "aurelia"
version = "0.1.0"
description = "After-hours AI intake agent for residential HVAC overflow calls."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "Donovan Armstrong" }]
keywords = ["livekit", "voice-agent", "hvac", "intake", "ai"]

dependencies = [
    "livekit-agents[openai,deepgram,silero,turn-detector]~=1.5",
    "google-api-python-client>=2.140",
    "google-auth>=2.34",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "structlog>=24.4",
    "tenacity>=9.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-requests",
]

[project.scripts]
aurelia = "aurelia.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aurelia"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # line length handled by formatter
    "B008",  # function calls in argument defaults (FastAPI/Pydantic pattern)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # assert in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_decorators = false  # livekit @function_tool isn't typed
ignore_missing_imports = false

[[tool.mypy.overrides]]
# Third-party libs without complete stubs.
module = [
    "googleapiclient.*",
    "google.auth.*",
    "google.oauth2.*",
    "livekit.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning:google.*",
]
